2008-02-15  Chris Lord  <chris@openedhand.com>

	* clutter/clutter-entry.c: (clutter_entry_class_init):
	More documentation fixes

2008-02-15  Chris Lord  <chris@openedhand.com>

	* clutter/clutter-label.c: (clutter_label_class_init):
	More documentation fixes

2008-02-15  Chris Lord  <chris@openedhand.com>

	* clutter/clutter-clone-texture.c:
	* clutter/clutter-texture.c: (clutter_texture_class_init):
	More documentation fixes

2008-02-15  Chris Lord  <chris@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-container.c:
	* clutter/clutter-media.c:
	* clutter/clutter-rectangle.c:
	* clutter/clutter-stage.c: (clutter_stage_class_init):
	* clutter/clutter-stage.h:
	* clutter/clutter-texture.c:
	* doc/reference/clutter-docs.sgml:
	Fix more documentation

2008-02-15  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.[ch]:
	* clutter/clutter-types.h:
	* doc/reference/clutter-docs.sgml: Fix a lot of documentation.

2008-02-15  Matthew Allum  <mallum@openedhand.com>

	* clutter/cogl/gles/cogl.c: (cogl_paint_init):
        Remove depth test getting turned on by default (unlike GL backend)

2008-02-15  Tomas Frydrych  <tf@openedhand.com>

	* configure.ac:
	* clutter/clutter-version.h.in:
	* build/msvc_2k5/clutter-version.h:
	Removed unused --without-fpu configure option and CLUTTER_NO_FPU
	macro

2008-02-15  Tomas Frydrych  <tf@openedhand.com>

	* build/mingw/README:
	* build/mingw/mingw-cross-compile.sh:
	Script that automates cross compilation with mingw by Neil Roberts
	<bpeeluk@yahoo.co.uk>

2008-02-15  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.[ch]: Rename
	clutter_actor_get_box_from_vertices() to
	clutter_actor_box_get_from_vertices().

	* clutter/clutter-group.c (clutter_group_query_coords): Fix the
	query_coords() implementation.

2008-02-15  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	(clutter_group_query_coords):